# Backup_Guardian

./: Cargo.toml  README.md  build.rs
common/dirs/: Cargo.toml
common/fs2/: Cargo.toml
common/notify/: Cargo.toml
common/sql_lite/: Cargo.toml
common/sql_lite/src/: conexao_sql.rs  lib.rs
common/tray_item/: Cargo.toml
common/winapi/: Cargo.toml
common/winit/: Cargo.toml
controller/painel_controller/: Cargo.toml
controller/painel_controller/src/: lib.rs  loader_view.rs
view/painel_load/: Cargo.toml
view/painel_load/src/: main.rs
